[metadata]
name = cryptnox-sdk-py
version = attr: cryptnox-sdk-py.__version__
description_file = README.rst
long_description_content_type = text/x-rst
keywords =
    python
    cryptography
license = LGPLv3+
author = Cryptnox SA
author_email = info@cryptnox.ch
home_page = https://www.cryptnox.com/
project_urls =
    Source Code = https://github.com/Cryptnox-Software/cryptnox-sdk-py
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    License :: Other/Proprietary License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Security :: Cryptography
    Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=3.11,<=3.13.7
packages = find:
packages_dir = cryptnox-sdk-py
zip_safe = False
include_package_data = True

[options.packages.find]
exclude =
    tests

[flake8]
max-line-length = 120
exclude = .venv,build,dist,*.egg-info,setup.macos,temp_macos,build,setup
