[metadata]
name = cryptnox_sdk_py
version = attr: cryptnox_sdk_py.__version__
description = Python SDK for managing Cryptnox smart card wallets.
long_description_content_type = text/markdown
keywords =
    smartcard
    hardware
    security
    cryptography
    nfc
license = LGPL-3.0
author = Cryptnox SA
author_email = info@cryptnox.com
home_page = https://www.cryptnox.com/
project_urls =
    Source Code = https://github.com/Cryptnox-Software/cryptnox-sdk-py
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Operating System :: OS Independent
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: Security :: Cryptography
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Hardware :: Universal Serial Bus (USB) :: Smart Card

[options]
python_requires = >=3.11,<=3.13.7
packages = find:
packages_dir = cryptnox_sdk_py
zip_safe = False
include_package_data = True

[options.packages.find]
exclude =
    tests

[flake8]
max-line-length = 120
exclude = .venv,build,dist,*.egg-info,setup.macos,temp_macos,build,setup
